# rust-azure

./: .azure.rs.swp  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  Makefile.in  README.md  appveyor.yml  azure-c.cpp  azure-c.h  azure.rc  azure.rs  azure_hl.rs  build.rs  cairo.rs  cairo_ft.rs  cairo_hl.rs  cairo_quartz.rs  cairo_xlib.rs  configure  fontconfig.rs  freetype.rs  gen.py  linkhack.rs  makefile.cargo  scaled_font.rs  servo-tidy.toml  test.cpp  test.rs  xlib.rs
include/mozilla/: DrawTargetCairo.h  mozalloc.h
include/mozilla/gfx/: DrawTargetCairo.h  DrawTargetSkia.h  HelpersSkia.h  PathSkia.h  QuartzSupport.h  ScaledFontBase.h  convolver.h  image_operations.h
include/mozilla/ipc/chromium/src/base/: basictypes.h
libazure/: 2D.h  BasePoint.h  BasePoint4D.h  BaseRect.h  Blur.cpp  Blur.h  BlurSSE2.cpp  DXTextureInteropNVpr.cpp  DXTextureInteropNVpr.h  DrawCommand.h  DrawEventRecorder.cpp  DrawTargetCG.cpp  DrawTargetCG.h  DrawTargetCairo.cpp  DrawTargetD2D.cpp  DrawTargetD2D.h  DrawTargetD2D1.cpp  DrawTargetD2D1.h  DrawTargetDual.cpp  DrawTargetDual.h  DrawTargetNVpr.cpp  DrawTargetNVpr.h  DrawTargetRecording.cpp  DrawTargetRecording.h  DrawTargetSkia.cpp  DrawTargetSkia.h  DrawingCommand.h  Factory.cpp  FilterNodeD2D1.cpp  FilterNodeSoftware.cpp  FilterProcessing.cpp  FilterProcessingSIMD-inl.h  FilterProcessingSSE2.cpp  FilterProcessingScalar.cpp  Filters.h  GradientStopsNVpr.cpp  GradientStopsNVpr.h  HelpersD2D.h  HelpersSkia.h  ImageScaling.cpp  (+73 more)
libazure/include/mozilla/: Compiler.h  NullPtr.h
libazure/include/mozilla/gfx/: 2D.h
libazure/mozilla/: Atomics.h  CheckedInt.h  Endian.h  JSONWriter.h  MSStdInt.h  MacroArgs.h  MacroForEach.h  Move.h  TypedEnum.h  Types.h  lz4_encoder.h
libazure/nvpr/: Clip.cpp  Clip.h  ConvexPolygon.cpp  ConvexPolygon.h  GL.cpp  GL.h  GLDefs.h  GLX.cpp  GLX.h  GLXDefs.h  Paint.cpp  Paint.h  ShaderProgram.cpp  ShaderProgram.h  ShadowShaders.cpp  ShadowShaders.h  WGL.cpp  WGL.h  WGLDefs.h
libazure/perftest/: Main.cpp  SanityChecks.cpp  SanityChecks.h  TestBase.cpp  TestBase.h  TestDrawTargetBase.cpp  TestDrawTargetBase.h  TestDrawTargetCairoImage.cpp  TestDrawTargetCairoImage.h  TestDrawTargetD2D.cpp  TestDrawTargetD2D.h  TestDrawTargetD2DWarp.cpp  TestDrawTargetD2DWarp.h  TestDrawTargetSkiaSoftware.cpp  TestDrawTargetSkiaSoftware.h  perftest.vcxproj  perftest.vcxproj.filters
libazure/player2d/: TreeItems.cpp  TreeItems.h  calltiminganalysis.cpp  calltiminganalysis.h  calltiminganalysis.ui  displaymanager.cpp  displaymanager.h  drawtargetview.cpp  drawtargetview.h  drawtargetview.ui  drawtargetwidget.cpp  drawtargetwidget.h  gradientstopsview.cpp  gradientstopsview.h  gradientstopsview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playbackmanager.cpp  playbackmanager.h  player2d.pro  redundancyanalysis.cpp  redundancyanalysis.h  redundancyanalysis.ui  resources.qrc  sourcesurfaceview.cpp  sourcesurfaceview.h  sourcesurfaceview.ui  surfaceview.cpp  surfaceview.h  timer.h
libazure/recordbench/: Main.cpp  RawTranslator.cpp  RawTranslator.h  recordbench.vcxproj
libazure/src/gfx/2d/: DrawTargetSkia.cpp  DrawTargetSkia.h  HelpersSkia.h  PathSkia.h  QuartzSupport.h  QuartzSupport.mm  ScaledFontFreetype.cpp  SourceSurfaceSkia.h  convolver.cpp  image_operations.cpp  image_operations.h
libazure/unittest/: Main.cpp  SanityChecks.cpp  TestBase.cpp  TestBase.h  TestBugs.cpp  TestDrawTarget.cpp  TestDrawTarget.h  TestDrawTargetD2D1.cpp  TestDrawTargetD2D1.h  TestDrawTargetD2DRecording.cpp  TestDrawTargetD2DRecording.h  TestHelpers.h  TestMatrix.cpp  TestMatrix.h  TestPath.cpp  TestPath.h  TestPoint.cpp  TestRect.cpp  TestRect.h  TestScaling.cpp  unittest.vcxproj
patches/: PathD2D_Arc.patch  aRotationAngle.patch  arc_update.patch
src/: azure-c.cpp  azure-c.h  azure.rs  azure_hl.rs  lib.rs  linkhack.rs  scaled_font.rs  test.rs
src/2d/: Blur.cpp  DrawTargetCairo.cpp  DrawTargetSkia.cpp  Factory.cpp  QuartzSupport.mm  Scale.cpp  ScaledFontFreetype.cpp  ScaledFontMac.cpp  convolver.cpp  image_operations.cpp
src/gfx/2d/: DrawTargetSkia.h  Factory.cpp  QuartzSupport.h  ScaledFontBase.cpp  ScaledFontFreetype.cpp  ScaledFontWin.cpp  SourceSurfaceSkia.cpp  convolver.h
