[package]
name = "azure"
version = "0.37.0"
edition = "2018"
authors = ["The Servo Project Developers"]
documentation = "https://doc.servo.org/azure/"
repository = "https://github.com/servo/rust-azure"
description = "Bindings to Mozilla's Moz2D library"
license = "MPL-2.0"

build = "build.rs"

[features]
default = ["gl_backend"]
gl_backend = ["servo-skia/gl_backend"]

[build-dependencies]
cmake = "0.1"

[dependencies]
euclid = "0.19"
libc = "0.2"
serde = {version = "1.0", features=["derive"], optional = true}
servo-skia = {version = "0.30000022", default-features = false}

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
servo-freetype-sys = "4.0.1"

[patch.crates-io]
servo-skia = { git = "https://github.com/servo/skia", branch = "no-gl" }
